# AnomalousFiltersExtension

./: CMakeLists.txt  README.md
AADDiffusionWeightedData/: AADDiffusionWeightedData.cxx  AADDiffusionWeightedData.xml  CMakeLists.txt  itkAnisotropicAnomalousDiffusionImageFilter.hxx  itkAutomaticConductanceImageCalculator.h
AADEPIData/: AADEPIData.cxx  AADEPIData.xml  CMakeLists.txt  itkAnisotropicAnomalousDiffusionImageFilter.hxx
AADImageFilter/: AADImageFilter.cxx  AADImageFilter.xml  AnisotropicAnomalousDiffusionImageFilter.hxx  CMakeLists.txt  itkAnisotropicAnomalousDiffusionImageFilter.h  itkAnisotropicAnomalousDiffusionImageFilter.hxx  itkAutomaticConductanceImageCalculator.hxx
AnomalousFiltersExtension/: CMakeLists.txt
AnomalousFiltersExtension/AADDiffusionWeightedData/: AADDiffusionWeightedData.cxx  AADDiffusionWeightedData.xml  CMakeLists.txt
AnomalousFiltersExtension/AADImageFilter/: AADImageFilter.cxx  AADImageFilter.xml  AnisotropicAnomalousDiffusionImageFilter.hxx
AnomalousFiltersExtension/IADImageFilter/: IADImageFilter.xml
CLI/AnomalousFiltersExtension/: CMakeLists.txt  CMakeLists.txt.user.18
CLI/AnomalousFiltersExtension-build/: AdditionalLauncherSettings-configure.cmake  AdditionalLauncherSettings.ini  AnomalousFiltersExtension-test-command-args.cmake  AnomalousFiltersExtension-upload-command-args.cmake  AnomalousFiltersExtension-upload-only-command-args.cmake  AnomalousFiltersExtension.cbp  AnomalousFiltersExtension.s4ext  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
CLI/AnomalousFiltersExtension-build/AADImageFilter/: AADImageFilterCLP.h  CTestTestfile.cmake  Makefile  cmake_install.cmake
CLI/AnomalousFiltersExtension-build/AADImageFilter/Data/Baseline/: AADImageFilterTest.raw
CLI/AnomalousFiltersExtension-build/AADImageFilter/Data/Input/: CTHeadAxial.nhdr
CLI/AnomalousFiltersExtension-build/AADImageFilter/Testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
CLI/AnomalousFiltersExtension-build/AADImageFilter/Testing/Cxx/: AADImageFilterData_config.cmake  AADImageFilterTest  CTestTestfile.cmake  Makefile  cmake_install.cmake
CLI/AnomalousFiltersExtension-build/IADImageFilter/: CTestTestfile.cmake  IADImageFilterCLP.h  Makefile  cmake_install.cmake
CLI/AnomalousFiltersExtension-build/IADImageFilter/Data/Baseline/: IADImageFilterTest.nhdr
CLI/AnomalousFiltersExtension-build/IADImageFilter/Testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
CLI/AnomalousFiltersExtension-build/IADImageFilter/Testing/Cxx/: CTestTestfile.cmake  IADImageFilterTest  Makefile  cmake_install.cmake
CLI/AnomalousFiltersExtension-build/lib/Slicer-4.3/cli-modules/: AADImageFilter  IADImageFilter
CLI/AnomalousFiltersExtension/AADDiffusionWeightedData/: AADDiffusionWeightedData.cxx  CMakeLists.txt
CLI/AnomalousFiltersExtension/AADImageFilter/: AADImageFilter.cxx  AADImageFilter.xml  AnisotropicAnomalousDiffusionImageFilter.h  AnisotropicAnomalousDiffusionImageFilter.hxx
CLI/AnomalousFiltersExtension/IADImageFilter/: IADImageFilter.cxx  IsotropicAnomalousDiffusionImageFilter.hxx
CLI/MSLesionDetectionExtension/HelloPy/: CMakeLists.txt  HelloPy.py
CLI/MSLesionDetectionExtension/MSLesionDetection/: CMakeLists.txt  MSLesionDetection.cxx  MSLesionDetection.xml
CLI/MSLesionDetectionExtension/MSLesionDetection/BrainExtraction/: BrainExtractionTool.cxx  BrainExtractionTool.h
CLI/MSLesionDetectionExtension/MSLesionDetection/NonUniformity/: NonUniformityN3.h
CLI/MSLesionDetectionExtension/MSLesionDetection/Registration/: MultimodalityRegistration.cxx  MultimodalityRegistration.h
CLI/MSLesionDetectionExtension/MSLesionDetection/Segmentation/: Segmentation.cxx
CLI/MSLesionTrack/: CMakeLists.txt
CLI/MSLesionTrack/DTILesionTrack/: CMakeLists.txt
IADImageFilter/: CMakeLists.txt  IADImageFilter.cxx  IADImageFilter.xml  IsotropicAnomalousDiffusionImageFilter.hxx  itkIsotropicAnomalousDiffusionImageFilter.hxx
MSLesionDetectionExtension/: CMakeLists.txt
MSLesionDetectionExtension/MSLesionDetection/: MSLesionDetection.cxx  MSLesionDetection.xml
MSLesionDetectionExtension/MSLesionDetection/NonUniformity/: NonUniformityN3.cxx
MSLesionDetectionExtension/MSLesionDetection/Segmentation/: Segmentation.h
MSLesionTrack/DTILesionTrack/: DTILesionTrack.cxx  DTILesionTrack.xml
MSLesionTrackExtension/: CMakeLists.txt
MSLesionTrackExtension/BrainExtractionTool/: BrainExtractionTool.cxx  BrainExtractionTool.xml  CMakeLists.txt
MSLesionTrackExtension/BrainTissuesMask/: BrainTissuesMask.cxx  BrainTissuesMask.xml  CMakeLists.txt
MSLesionTrackExtension/DTILesionTrack/: CMakeLists.txt  DTILesionTrack.cxx  DTILesionTrack.xml
MSLesionTrackExtension/DTILesionTrack/DWIEddyCorrect/: DWIEddyCorrect.cxx  DWIEddyCorrect.h
MSLesionTrackExtension/DTILesionTrack/Segmentation/: DTIMapSegmentation.cxx  DTIMapSegmentation.h
